--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,16 @@
-<h1>
-  {{tituloPrincipal}}
-</h1>
+<h1>{{tituloPrincipal}}</h1>
 <div class="col-xs-12 col-md-9 listado-productos">
   <div class="card-deck">
-    <div class="card ">
-      <!-- <img class="card-img-top img-fluid" src="bandera00.png" alt="Card image cap"> -->
-      <div class="card-block">
-          <input type="text" [(ngModel)]="tituloCard00"/>
-        <h4 class="card-title">{{tituloCard00}}</h4>
-        <p class="card-text">{{descripcionCard00}}</p>
-        <button type="submit" class="btn btn-primary form-text" (click)="actionBoton00()">{{textoBotonCar00}}</button>
-      </div>
-    </div>
-    <div class="card">
-      <!-- <img class="card-img-top" src="img/bandera00.png" alt="Card image cap"> -->
-      <div class="card-block">
-          <input type="text" [(ngModel)]="tituloCard01"/>
-          <h4 class="card-title">{{tituloCard01}}</h4>
-          <p class="card-text">{{descripcionCard01}}</p>
-          <button type="submit" class="btn btn-primary form-text" (click)="actionBoton01()" >{{textoBotonCar01}}</button>
-      </div>
+    <div *ngFor="let tituloTEMP of titulos">
+        <div class="card ">
+          <!-- <img class="card-img-top img-fluid" src="bandera00.png" alt="Card image cap"> -->
+          <div class="card-block">
+            <h4 class="card-title text-xs-center"><input-tituloCard titulo="{{tituloTEMP.unitno}}"></input-tituloCard></h4>
+            <p class="card-text">Flota: <input-tituloCard titulo="{{tituloTEMP.flota}}"></input-tituloCard></p>
+            <p class="card-text">Odometro: <input-tituloCard titulo="{{tituloTEMP.odometro}}"></input-tituloCard></p>
+            <button type="submit" class="btn btn-primary form-text" (click)="actionBoton00()">{{textoBoton}}</button>
+          </div>
+        </div>
     </div>
   </div>
   <div class="row">
